--- a/assets/style.css
+++ b/assets/style.css
@@ -1,44 +1,61 @@
-
-div.mainNav {
-
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-
-}
-
-div.nav {
-
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);;
-  grid-gap: 10px;
-  padding: 15px;
-}
+@@import url(https://fonts.googleapis.com/css?family=Open+Sans|Roboto);
 
 div.image {
 
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 
 }
 
+a {
+
+  width: 100%;
+
+  grid-column: 2 / 3;
+
+
+}
 img {
 
   width: 100%;
 
+  grid-column: 2 / 4;
+
 
 }
+div.section {
 
-.homeButton {
-
-  grid-column: 3 / 4;
+  display: grid;
+  grid-template-columns: 1fr;
 }
+div.headPara {
 
-.leftButton {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+h2, p {
 
   grid-column: 2 / 3;
+  text-align: center;
+
 }
 
-.rightButton {
+p {
 
-  grid-column: 3 / 4;
+  text-align: left;
+}
+iframe {
+
+  justify-content: center;
+}
+body {
+
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+iframe {
+
+  width: 100%;
+  min-height: 400px;
 }
