--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,34 @@
-@@import url(https://fonts.googleapis.com/css?family=Open+Sans|Roboto);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
+html {
+
+  background: linear-gradient(to bottom right, #577399, #BDD5EA);
+}
+
+body {
+
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+header {
+
+  border-bottom: 5px solid black;
+}
+
+h1, h2 {
+
+  font-family: 'Roboto', sans-serif;
+}
+
+p {
+
+  font-family: 'Open Sans', sans-serif;
+}
 div.image {
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
 
 }
 
@@ -11,7 +36,7 @@ a {
 
   width: 100%;
 
-  grid-column: 2 / 3;
+
 
 
 }
@@ -19,7 +44,7 @@ img {
 
   width: 100%;
 
-  grid-column: 2 / 4;
+
 
 
 }
@@ -31,11 +56,10 @@ div.section {
 div.headPara {
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
 }
-h2, p {
+h2 {
 
-  grid-column: 2 / 3;
   text-align: center;
 
 }
@@ -43,16 +67,15 @@ h2, p {
 p {
 
   text-align: left;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 iframe {
 
   justify-content: center;
 }
-body {
 
-  margin-left: 50px;
-  margin-right: 50px;
-}
+
 
 iframe {
 
