--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,76 @@
+/*
+  style.CSS :
+
+  index
+  - Imports & general styles
+
+    + Page Background
+    + general components
+    + header
+
+  - typography
+  - Mobile-Tablet CSS
+  - Tablet to Desktop CSS
+
+
+
+
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
 html {
 
   background: linear-gradient(to bottom right, #577399, #BDD5EA);
+  font-size: 20px;
+}
+
+#intro {
+
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
 }
 
 body {
 
   margin-left: 50px;
   margin-right: 50px;
+  margin-bottom: 30px;
+}
+div.section {
+
+  margin-bottom: 100px;
+}
+img {
+
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  max-height: 400px;
+
+}
+p {
+  text-align: left;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
 }
 
-header {
+h2 {
 
-  border-bottom: 5px solid black;
+  text-align: center;
+
+}
+iframe {
+
+  justify-content: center;
+  width: 100%;
+  min-height: 400px;
+  max-height: 500px;
 }
 
 h1, h2 {
@@ -25,60 +82,99 @@ p {
 
   font-family: 'Open Sans', sans-serif;
 }
-div.image {
 
-  display: grid;
-  grid-template-columns: 1fr;
-
+header {
+  border-bottom: 5px solid black;
+  border-color: #5B5162;
 }
 
-a {
-
-  width: 100%;
+@media screen and (max-width: 1000px) {
 
 
+  div.image {
 
+    display: grid;
+    grid-template-columns: 1fr;
 
-}
-img {
+  }
+  div.section {
 
-  width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  div p {
 
-
-
-
-}
-div.section {
-
-  display: grid;
-  grid-template-columns: 1fr;
-}
-div.headPara {
-
-  display: grid;
-  grid-template-columns: 1fr;
-}
-h2 {
-
-  text-align: center;
-
-}
-
-p {
-
-  text-align: left;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-iframe {
-
-  justify-content: center;
-}
+    margin-top: 20px;
+  }
 
 
 
-iframe {
+} /* END OF MOBILE TO IPAD CSS */
 
-  width: 100%;
-  min-height: 400px;
+@media screen and (min-width: 1001px) {
+
+  div.section {
+
+    display: grid;
+
+
+  }
+
+  #dataCollect, #explainedVid {
+
+    grid-template-columns: 1fr 60%;
+
+  }
+
+  #dataCollect h2, #explainedVid h2 {
+
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+
+
+  }
+
+  #dataCollect p, #explainedVid p {
+
+
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+
+  }
+  #dataCollect div.image, #explainedVid div.image {
+
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+
+
+  }
+
+
+  #dataViz {
+
+    grid-template-columns: 60% 1fr;
+  }
+
+  #dataViz div.image {
+
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+  }
+
+  #dataViz p {
+
+
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+
+  }
+
+  #dataViz h2 {
+
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
 }
