--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
   + Grid
   + Header
   + Sections
+  + Footer
 
 
 
@@ -40,6 +41,13 @@ body {
 div.section {
 
   margin-bottom: 100px;
+}
+
+a {
+
+  color: inherit;
+  text-decoration: none;
+
 }
 
 img {
@@ -86,7 +94,7 @@ iframe {
    Typography scheme
    =================== */
 
-h1, h2 {
+h1, h2, li {
 
   font-family: 'Roboto', sans-serif;
 }
@@ -144,7 +152,13 @@ p {
 
 
 }
+#footer {
 
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
+
+}
 
 /* ===================
   Header styles
@@ -212,8 +226,33 @@ header {
 
   }
 
+  #dataViz p {
+
+    grid-column:  1 / 2;
+    grid-row: 2 / 3;
+  }
+
 }
 
 /* ===================
   Footer styles
   =================== */
+  #footer {
+
+    border-top: 5px solid #5B5162;
+    justify-items: center;
+    padding: 50px;
+
+  }
+
+  li {
+    background-color: #DDDBF1;
+    border: 5px solid #5B5162;
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+    list-style-type: none;
+    padding: 5px;
+    text-align: center;
+    width: 50%;
+
+  }
